--- a/livingroom.html
+++ b/livingroom.html
@@ -22,9 +22,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="bedroom.html">Bed Room</a>
-              <a class="dropdown-item" href="livingroom.html">Living Room</a>
+              <a class="dropdown-item" href="livingroom.html">living Room</a>
               <a class="dropdown-item" href="kitchen.html">Kitchen</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="bathroom.html">Another action</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
@@ -56,20 +56,20 @@
         </form>
       </div>
     </nav>
-<h1 class="text-center heading">LivingRoom Interior Design, Ideas and Inspiration</h1><br>
+<h1 class="text-center heading">livingroomRoom Interior Design, Ideas and Inspiration</h1><br>
 <div class="newcontainer">
   <div class="row">
     <div class="col-sm-3">
-      <a href="living/1.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/1.jpg" alt=""></a>
+      <a href="livingroom/1.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/1.jpg" alt=""></a>
     </div>
     <div class="col-sm-3">
-      <a href="living/2.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/2.jpg" alt=""></a>
+      <a href="livingroom/2.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/2.jpg" alt=""></a>
     </div>
     <div class="col-sm-3">
-      <a href="living/3.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/3.jpg" alt=""></a>
+      <a href="livingroom/3.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/3.jpg" alt=""></a>
     </div>
     <div class="col-sm-3">
-      <a href="living/4.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/4.jpg" alt=""></a>
+      <a href="livingroom/4.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/4.jpg" alt=""></a>
     </div>
   </div>
   </div>
@@ -77,16 +77,16 @@
   <div class="newcontainer">
     <div class="row">
       <div class="col-sm-3">
-        <a href="living/5.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/5.jpg" alt=""></a>
+        <a href="livingroom/5.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/5.jpg" alt=""></a>
       </div>
       <div class="col-sm-3">
-        <a href="living/6.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/6.jpg" alt=""></a>
+        <a href="livingroom/6.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/6.jpg" alt=""></a>
       </div>
       <div class="col-sm-3">
-        <a href="living/7.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/7.jpg" alt=""></a>
+        <a href="livingroom/7.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/7.jpg" alt=""></a>
       </div>
       <div class="col-sm-3">
-        <a href="living/8.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/8.jpg" alt=""></a>
+        <a href="livingroom/8.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/8.jpg" alt=""></a>
       </div>
     </div>
     </div>
@@ -94,16 +94,16 @@
     <div class="newcontainer">
       <div class="row">
         <div class="col-sm-3">
-          <a href="living/9.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/9.jpg" alt=""></a>
+          <a href="livingroom/9.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/9.jpg" alt=""></a>
         </div>
         <div class="col-sm-3">
-          <a href="living/10.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/10.jpg" alt=""></a>
+          <a href="livingroom/10.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/10.jpg" alt=""></a>
         </div>
         <div class="col-sm-3">
-          <a href="living/11.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/11.jpg" alt=""></a>
+          <a href="livingroom/11.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/11.jpg" alt=""></a>
         </div>
         <div class="col-sm-3">
-          <a href="living/12.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/12.jpg" alt=""></a>
+          <a href="livingroom/12.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/12.jpg" alt=""></a>
         </div>
       </div>
       </div>
@@ -111,16 +111,16 @@
       <div class="newcontainer">
         <div class="row">
           <div class="col-sm-3">
-            <a href="living/13.jpg"  data-lightbox="mygallery"><img class="imga" id="myImg" src="living/13.jpg" alt=""></a>
+            <a href="livingroom/13.jpg"  data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/13.jpg" alt=""></a>
           </div>
           <div class="col-sm-3">
-            <a href="living/14.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/14.jpg" alt=""></a>
+            <a href="livingroom/14.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/14.jpg" alt=""></a>
           </div>
           <div class="col-sm-3">
-            <a href="living/15.jpg"  data-lightbox="mygallery"><img class="imga" id="myImg" src="living/15.jpg" alt=""></a>
+            <a href="livingroom/15.jpg"  data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/15.jpg" alt=""></a>
           </div>
           <div class="col-sm-3">
-            <a href="living/16.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/16.jpg" alt=""></a>
+            <a href="livingroom/16.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/16.jpg" alt=""></a>
           </div>
         </div>
         </div>
@@ -128,16 +128,16 @@
         <div class="newcontainer">
           <div class="row">
             <div class="col-sm-3">
-              <a href="living/17.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/17.jpg" alt=""></a>
+              <a href="livingroom/17.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/17.jpg" alt=""></a>
             </div>
             <div class="col-sm-3">
-              <a href="living/18.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/18.jpg" alt=""></a>
+              <a href="livingroom/18.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/18.jpg" alt=""></a>
             </div>
             <div class="col-sm-3">
-              <a href="living/19.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/19.jpg" alt=""></a>
+              <a href="livingroom/19.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/19.jpg" alt=""></a>
             </div>
             <div class="col-sm-3">
-              <a href="living/20.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/20.jpg" alt=""></a>
+              <a href="livingroom/20.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/20.jpg" alt=""></a>
             </div>
           </div>
           </div>
@@ -145,16 +145,16 @@
           <div class="newcontainer">
             <div class="row">
               <div class="col-sm-3">
-                <a href="living/21.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/21.jpg" alt=""></a>
+                <a href="livingroom/21.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/21.jpg" alt=""></a>
               </div>
               <div class="col-sm-3">
-                <a href="living/22.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/22.jpg" alt=""></a>
+                <a href="livingroom/22.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/22.jpg" alt=""></a>
               </div>
               <div class="col-sm-3">
-                <a href="living/23.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/23.jpg" alt=""></a>
+                <a href="livingroom/23.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/23.jpg" alt=""></a>
               </div>
               <div class="col-sm-3">
-                <a href="living/24.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/24.jpg" alt=""></a>
+                <a href="livingroom/24.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/24.jpg" alt=""></a>
               </div>
             </div>
             </div>
@@ -162,16 +162,16 @@
             <div class="newcontainer">
               <div class="row">
                 <div class="col-sm-3">
-                  <a href="living/25.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/25.jpg" alt=""></a>
+                  <a href="livingroom/25.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/25.jpg" alt=""></a>
                 </div>
                 <div class="col-sm-3">
-                  <a href="living/26.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/26.jpg" alt=""></a>
+                  <a href="livingroom/26.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/26.jpg" alt=""></a>
                 </div>
                 <div class="col-sm-3">
-                  <a href="living/27.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/27.jpg" alt=""></a>
+                  <a href="livingroom/27.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/27.jpg" alt=""></a>
                 </div>
                 <div class="col-sm-3">
-                  <a href="living/28.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/28.jpg" alt=""></a>
+                  <a href="livingroom/28.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/28.jpg" alt=""></a>
                 </div>
               </div>
               </div>
@@ -179,16 +179,16 @@
               <div class="newcontainer">
                 <div class="row">
                   <div class="col-sm-3">
-                    <a href="living/29.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/29.jpg" alt=""></a>
+                    <a href="livingroom/29.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/29.jpg" alt=""></a>
                   </div>
                   <div class="col-sm-3">
-                    <a href="living/30.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/30.jpg" alt=""></a>
+                    <a href="livingroom/30.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/30.jpg" alt=""></a>
                   </div>
                   <div class="col-sm-3">
-                    <a href="living/31.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/31.jpg" alt=""></a>
+                    <a href="livingroom/31.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/31.jpg" alt=""></a>
                   </div>
                   <div class="col-sm-3">
-                    <a href="living/32.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="living/32.jpg" alt=""></a>
+                    <a href="livingroom/32.jpg" data-lightbox="mygallery"><img class="imga" id="myImg" src="livingroom/32.jpg" alt=""></a>
                   </div>
                 </div>
                 </div>
