--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -46,7 +47,7 @@
     <div class="bg1"></div>
 
     <div class="jumbo">
-      <h1 class="display">Sai Interiors</h1>
+      <h1 class="display">Domes Interiors</h1>
       <h3 class="display1">Simply Unique , Simply Better.</h3>
       <h6 style="color:white;">Creativity is allowing yourself to make mistakes. Design <br> is knowing which ones to keep.</h6>
       <br>
