--- a/livingroom.html
+++ b/livingroom.html
@@ -23,9 +23,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="bedroom.html">Bed Room</a>
-              <a class="dropdown-item" href="livingroom.html">living Room</a>
+              <a class="dropdown-item" href="livingroom.html">Living Room</a>
               <a class="dropdown-item" href="kitchen.html">Kitchen</a>
-              <a class="dropdown-item" href="bathroom.html">Another action</a>
+              <a class="dropdown-item" href="bathroom.html">Bathroom</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
