--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="bg1"></div>
 
     <div class="jumbo">
-      <h1 class="display">Domes Interiors</h1>
-      <h3 class="display1">Simply Unique , Simply Better.</h3>
-      <h6 style="color:white;">Creativity is allowing yourself to make mistakes. Design <br> is knowing which ones to keep.</h6>
+      <h1 class="display" id="display">Domes Interiors</h1>
+      <h3 class="display1" id="display">Simply Unique , Simply Better.</h3>
+      <h6 class="smal" id="display">Creativity is allowing yourself to make mistakes. Design <br> is knowing which ones to keep.</h6>
       <br>
       <a class="btn home-btn btn-lg" href="#" role="button">Learn More</a>
     </div>
