--- a/bedroom.html
+++ b/bedroom.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
-    <link rel="stylesheet" href="lightbox.min.css">
+    <link rel="stylesheet" href="lightbox.min.css"><link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="index.html"><img src="logo12.png"  class="logo" height=50 width= 140></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand style" href="index.html">DOMES</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -21,13 +21,13 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Categories
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="bedroom.html">Bed Room</a>
-              <a class="dropdown-item" href="livingroom.html">Living Room</a>
-              <a class="dropdown-item" href="kitchen.html">Kitchen</a>
-              <a class="dropdown-item" href="bathroom.html">BathRoom</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+            <div class="dropdown-menu" id="drop" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" id="drop" href="bedroom.html">Bed Room</a>
+              <a class="dropdown-item" id="drop" href="livingroom.html">Living Room</a>
+              <a class="dropdown-item" id="drop" href="kitchen.html">Kitchen</a>
+              <a class="dropdown-item" id="drop" href="bathroom.html">BathRoom</a>
+              <div class="divider"></div>
+              <a class="dropdown-item" id="drop" href="#">Something else here</a>
             </div>
           </li>
           <li class="nav-item active">
@@ -42,7 +42,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-search" type="submit">Search</button>
+          <button class="btn btn-search" id="btn-search" type="submit">Search</button>
         </form>
       </div>
     </nav>
@@ -65,7 +65,7 @@
     </div>
   </div>
   </div>
-  <br><br>
+
   <div class="newcontainer">
     <div class="row">
       <div class="col-sm-3">
@@ -82,7 +82,7 @@
       </div>
     </div>
     </div>
-    <br><br>
+
     <div class="newcontainer">
       <div class="row">
         <div class="col-sm-3">
@@ -99,7 +99,7 @@
         </div>
       </div>
       </div>
-      <br><br>
+
       <div class="newcontainer">
         <div class="row">
           <div class="col-sm-3">
@@ -116,7 +116,7 @@
           </div>
         </div>
         </div>
-        <br><br>
+
         <div class="newcontainer">
           <div class="row">
             <div class="col-sm-3">
@@ -133,7 +133,7 @@
             </div>
           </div>
           </div>
-          <br><br>
+
           <div class="newcontainer">
             <div class="row">
               <div class="col-sm-3">
@@ -150,7 +150,7 @@
               </div>
             </div>
             </div>
-            <br><br>
+
             <div class="newcontainer">
               <div class="row">
                 <div class="col-sm-3">
@@ -167,7 +167,7 @@
                 </div>
               </div>
               </div>
-              <br><br>
+
               <div class="newcontainer">
                 <div class="row">
                   <div class="col-sm-3">
@@ -184,7 +184,7 @@
                   </div>
                 </div>
                 </div>
-                <br><br>
+
               <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
