--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>Interior Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="index.html"><img src="logo12.png"  class="logo" height=50 width= 140></a>
+    <nav class="navbar navbar-expand-lg color navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand style" href="index.html">DOMES</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -18,13 +19,13 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Categories
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="bedroom.html">Bed Room</a>
-              <a class="dropdown-item" href="livingroom.html">Living Room</a>
-              <a class="dropdown-item" href="kitchen.html">Kitchen</a>
-              <a class="dropdown-item" href="bathroom.html">BathRoom</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+            <div class="dropdown-menu" id="drop" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" id="drop" href="bedroom.html">Bed Room</a>
+              <a class="dropdown-item" id="drop" href="livingroom.html">Living Room</a>
+              <a class="dropdown-item" id="drop" href="kitchen.html">Kitchen</a>
+              <a class="dropdown-item" id="drop" href="bathroom.html">BathRoom</a>
+              <div class="divider"></div>
+              <a class="dropdown-item" id="drop" href="#">Something else here</a>
             </div>
           </li>
           <li class="nav-item active">
@@ -39,7 +40,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-search" type="submit">Search</button>
+          <button class="btn btn-search" id="btn-search" type="submit">Search</button>
         </form>
       </div>
     </nav>
