--- a/aboutus.html
+++ b/aboutus.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interior Design</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+
   </head>
   <body>
-    <div class="bg1"></div>
-    <nav class="navbar navbar-expand-lg color navbar-dark fixed-top transparent">
+
+    <nav class="navbar navbar-expand-lg color navbar-dark bg-dark fixed-top">
       <a class="navbar-brand style" href="index.html">DOMES</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,19 +45,16 @@
       </div>
     </nav>
 
+<div class="bg2"></div>
 
-
-    <div class="jumbo">
-      <h1 class="display" id="display">Domes Interiors</h1>
-      <h3 class="display1" id="display">Passion to design Inspired homes</h3>
-      <h6 class="smal" >That Exceed our client's Expectations</h6>
-      <br>
-      <a class="btn home-btn btn-lg" href="#" role="button">Learn More</a>
+    <div class="over head1">
+      <h1 align="center">About Us</h1>
+      <p>At domes interiors we provide interior design services for new construction, remodelling and interior detailing includes construction selections, space planning and project management for developers, builders, investors and private homeowners.<br>
+        <hr class="line"> We also provide interior design services,  project guidance and supervision for commercial projects. We are committed to deliver successful projects on time within budget.</p>
     </div>
-    <script type="text/javascript" src="main.js">
 
-    </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
