--- a/livingroom.html
+++ b/livingroom.html
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle underline" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Categories
             </a>
             <div class="dropdown-menu" id="drop" aria-labelledby="navbarDropdown">
@@ -31,12 +31,12 @@
             </div>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link underline" href="aboutus.html">About Us</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link underline" href="contact.html">Contact</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item active underline">
             <a class="nav-link" href="#">Our Picks</a>
           </li>
         </ul>
